# why

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
.claude/commands/: create-pr.md  merged.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/detector/: mod.rs  path_resolver.rs  symlink_analyzer.rs
src/package_managers/: apt.rs  bun.rs  cargo.rs  chocolatey.rs  gem.rs  go.rs  homebrew.rs  mise.rs  mod.rs  n.rs  nix.rs  node_global.rs  npm.rs  pip.rs  pipx.rs  pnpm.rs  scoop.rs  snap.rs  system.rs  winget.rs  yarn.rs
src/platform/: mod.rs
