[package]
name = "why"
version = "0.1.0"
edition = "2021"
description = "Identify which package manager installed a command"
license = "MIT"
repository = "https://github.com/koizuka/why"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cross-platform which
which = "6.0"

# Regex for pattern matching
regex = "1.10"

# Colored output
colored = "3.0"

# Cross-platform home directory
dirs = "5.0"

# Lazy static for compiled regexes
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
