[package]
name = "why"
version = "0.1.4"
edition = "2021"
description = "Identify which package manager installed a command"
license = "MIT"
repository = "https://github.com/koizuka/why"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cross-platform which
which = "8.0"

# Regex for pattern matching
regex = "1.10"

# Colored output
colored = "3.0"

# Cross-platform home directory
dirs = "6.0"

# Lazy static for compiled regexes
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
